<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/fbb"
    android:backgroundTint="@color/fbb"
    android:elevation="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <!--text view for our course name-->
        <TextView
            android:id="@+id/idTVEventName"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:padding="3dp"
            android:text="@string/event_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--text view for our course tracks-->
            <TextView
                android:id="@+id/idTVEventDetails"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/event_details"
                android:textColor="@color/black" />


            <!--text view for our course duration-->
            <TextView
                android:id="@+id/idTVEventDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/event_date"
                android:textColor="@color/black" />



        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <!--text view for our course description-->
        <TextView
            android:id="@+id/idTVEventContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/contact_number"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/idTVEventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/event_time"
            android:textColor="@color/black" />


    </LinearLayout>
        <TextView
            android:id="@+id/idTVEventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/location"
            android:textColor="@color/black" />


    </LinearLayout>

</androidx.cardview.widget.CardView>